<resources>
    <string name="app_name">Youst Kotlin</string>
    <string name="action_settings">Settings</string>

    <string name="showcase_title">Welcome! 👋</string>
    <string name="showcase_subtitle">Yellow programming challenges app, here you can solve a few of the most common Android issues.</string>

    <string name="action_open_challenge">Go!</string>

    <string name="pokemon_detail">Pokemon Detail</string>

    <string name="activity_challenge_title_crazy_lists">Crazy Lists</string>
    <string name="activity_challenge_title_listen_to_me">Listen to Me</string>
    <string name="activity_challenge_title_archie">Archie</string>
    <string name="activity_challenge_title_jetpack_navigation">Jetpack Navigation</string>

    <string name="content_description_card_bookmark">card_bookmark</string>
    <string name="content_description_right_action">right_action_menu</string>
    <string name="content_description_image">content_description_image</string>

    <string name="work_in_progress">Sorry! We are still working on this challenge</string>
    <string name="empty" />
    <string name="help">Help</string>
    <string name="understood">Understood</string>
    <string name="instructions">Instructions</string>

    <string name="toolbar_title">Toolbar Title</string>
    <string name="navigation_title_emoji_1">🙈</string>
    <string name="navigation_title_emoji_2">🙉</string>
    <string name="navigation_title_emoji_3">🙊</string>
    <string name="navigation_title_emoji_deeplink">🔗🤖</string>
    <string name="navigation_title_deeplink">You\'ve arrived to a secret screen!</string>
    <string name="navigation_title_step_1">Hello! What\'s your name?</string>
    <string name="navigation_title_step_2">Nice to meet you, %1$s! Tell us... what are you passionate about?</string>
    <string name="navigation_title_step_3">Thanks for reaching out, %1$s!\n\nTo know more about us, visit our website linked below! ⬇️</string>
    <string name="action_next">Next</string>
    <string name="action_go_back">Go back</string>
    <string name="yellowme_link">yellowme.mx 💛</string>
    <string name="deep_link_widget">Deep Link</string>
</resources>
