<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="35dp">

    <androidx.emoji.widget.EmojiTextView
        android:id="@+id/titleEmoji"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navigation_title_emoji_3"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/goodbyeTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/goodbyeTextView"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/navigation_title_step_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/centerGuide"/>

    <androidx.emoji.widget.EmojiTextView
        android:id="@+id/yellowmeLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/montserrat"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/yellowme_link"
        android:textColor="@color/yellow"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/centerGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>