<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dimen_32">

    <androidx.emoji.widget.EmojiTextView
        style="@style/Challenge.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navigation_title_emoji_1"
        android:textSize="@dimen/size_40"
        app:layout_constraintBottom_toTopOf="@id/greetingTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/greetingTextView"
        style="@style/Challenge.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/navigation_title_step_1"
        app:layout_constraintBottom_toTopOf="@id/nameEditText"
        app:layout_constraintStart_toStartOf="@id/nameEditText" />

    <EditText
        android:id="@+id/nameEditText"
        style="@style/Challenge.Subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@id/centerGuide" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/navigateButton"
        style="@style/ButtonColored.Primary"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_15"
        android:text="@string/action_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/centerGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>