<?xml version="1.0" encoding="utf-8"?>
<merge>

    <com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/mainAppBar"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@color/white"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="6dp"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/white"
            app:expandedTitleMarginBottom="16dp"
            app:expandedTitleMarginStart="8dp"
            app:expandedTitleMarginTop="16dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:title="@string/empty">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAction"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:contentInsetStart="12dp"
                android:contentInsetLeft="12dp"
                android:contentInsetEnd="0dp"
                android:contentInsetRight="0dp"
                app:contentInsetEnd="0dp"
                app:contentInsetLeft="12dp"
                app:contentInsetRight="0dp"
                app:contentInsetStart="12dp"
                app:elevation="0dp"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/SharedAppTheme.PopupOverlay">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/collapsingTitleContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/leftAction"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:contentDescription="@string/content_description_right_action"
                        android:src="@drawable/ic_back_black"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/toolbarTitle"
                        style="@style/Header"
                        android:layout_marginStart="8dp"
                        android:minHeight="60dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/toolbar_title"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/leftAction"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

</merge>
